--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
         <section id="albums" class="section">
             <h2>Principais Álbuns e EPs</h2>
-            <ul>
-                <li><strong>Christmas Kisses (EP)</strong> (2012)</li>
-                <li><strong>Yours Truly</strong> (2013)</li>
-                <li><strong>My Everything</strong> (2014)</li>
-                <li><strong>Christmas & Chill (EP)</strong> (2015)</li>
-                <li><strong>Dangerous Woman</strong> (2016)</li>
-                <li><strong>Sweetener</strong> (2018)</li>
-                <li><strong>Thank U, Next</strong> (2019)</li>
-                <li><strong>k bye for now (swt live)</strong> (2019)</li>
-                <li><strong>Positions</strong> (2020)</li>
-                <li><strong>Eternal Sunshine</strong> (2024)</li>
+            <ul class="albuns_link">
+                <li><a href="https://open.spotify.com/album/5MfeQZrrNfMqcaq03U9qOr?si=Z2aA0ChoRwiuuwb5im6hLQ"> <strong> Christmas Kisses (EP) (2012)</strong></a></li>
+                <li><a href="https://open.spotify.com/album/2VSBGJ8bUuNgmOYXHIQagM?si=MRppEiUXQAe8eOV7r5Kkew"><strong> Yours Truly (2013)</strong></a></li>
+                <li><a href="https://open.spotify.com/album/6EVYTRG1drKdO8OnIQBeEj?si=ekmv9WE8RPesMctVIQW5fg"><strong>My Everything (2014) </strong></a></li>
+                <li><a href="https://open.spotify.com/album/5wJD60fqranwuUGvOGSiyt?si=qvqfDGb6TZORLOmbkUSz-Q"><strong>Christmas & Chill (EP)</strong></a></li>
+                <li><a href="https://open.spotify.com/album/5X7x18kW3mVIvnuNeedM6b?si=AmI9DrjkQY6UIJseVkXfvg"><strong>Dangerous Woman (2016)</strong></li>
+                <li><a href="https://open.spotify.com/album/3tx8gQqWbGwqIGZHqDNrGe?si=b_zqzFtXTFK-34CuJ3210A"><strong>Sweetener (2018)</strong></a></li>
+                <li><a href="https://open.spotify.com/album/2fYhqwDWXjbpjaIJPEfKFw?si=-qgfQ6FdSQWi4J94JvK2vw"><strong>Thank U, Next (2019)</strong></a></li>
+                <li><a href="https://open.spotify.com/album/5UACk85y1hNRSUtY0ss8pb?si=Y2sTRrMpQ9e1vbt3ExVzbg"><strong>k bye for now (swt live) (2019)</strong></a></li>
+                <li><a href="https://open.spotify.com/album/74vajFwEwXJ61OW1DKSPEa?si=Jl0L_NFTQ2eIhO1E03ceuw"><strong>Positions (2020)</strong></a></li>
+                <li><a href="https://open.spotify.com/album/5EYKrEDnKhhcNxGedaRQeK?si=XsVsxpnZSY63r7Z-H8KEug"><strong>Eternal Sunshine (2024)</strong></a></li>
             </ul>
         </section>
 
@@ -59,7 +59,7 @@
                 <li><strong>Sam & Cat</strong> (2013)</li>
                 <li><strong>Scream Queens</strong> (2015)</li>
                 <li><strong>Excuse Me, I Love You</strong> (2020)</li>
-                <li><strong>Não Olhe para Cima</strong> (2021)</li>
+                <li><strong>Não Olhe para Cima</strong> (2021)</li<a href="https://www.instagram.com/arianagrande">
                 <li><strong>Wicked</strong> (2024)</li>
                 <li><strong>Wicked: parte 2</strong> (2025)</li>
 
