--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#albums">Álbuns</a></li>
                 <li><a href="#tours">Turnês</a></li>
+                <li><a href="#filmes">Filmes</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
@@ -29,16 +30,16 @@
         <section id="albums" class="section">
             <h2>Principais Álbuns e EPs</h2>
             <ul class="albuns_link">
-                <li><a href="https://open.spotify.com/album/5MfeQZrrNfMqcaq03U9qOr?si=Z2aA0ChoRwiuuwb5im6hLQ"> <strong> Christmas Kisses (EP) (2012)</strong></a></li>
-                <li><a href="https://open.spotify.com/album/2VSBGJ8bUuNgmOYXHIQagM?si=MRppEiUXQAe8eOV7r5Kkew"><strong> Yours Truly (2013)</strong></a></li>
-                <li><a href="https://open.spotify.com/album/6EVYTRG1drKdO8OnIQBeEj?si=ekmv9WE8RPesMctVIQW5fg"><strong>My Everything (2014) </strong></a></li>
-                <li><a href="https://open.spotify.com/album/5wJD60fqranwuUGvOGSiyt?si=qvqfDGb6TZORLOmbkUSz-Q"><strong>Christmas & Chill (EP)</strong></a></li>
-                <li><a href="https://open.spotify.com/album/5X7x18kW3mVIvnuNeedM6b?si=AmI9DrjkQY6UIJseVkXfvg"><strong>Dangerous Woman (2016)</strong></li>
-                <li><a href="https://open.spotify.com/album/3tx8gQqWbGwqIGZHqDNrGe?si=b_zqzFtXTFK-34CuJ3210A"><strong>Sweetener (2018)</strong></a></li>
-                <li><a href="https://open.spotify.com/album/2fYhqwDWXjbpjaIJPEfKFw?si=-qgfQ6FdSQWi4J94JvK2vw"><strong>Thank U, Next (2019)</strong></a></li>
-                <li><a href="https://open.spotify.com/album/5UACk85y1hNRSUtY0ss8pb?si=Y2sTRrMpQ9e1vbt3ExVzbg"><strong>k bye for now (swt live) (2019)</strong></a></li>
-                <li><a href="https://open.spotify.com/album/74vajFwEwXJ61OW1DKSPEa?si=Jl0L_NFTQ2eIhO1E03ceuw"><strong>Positions (2020)</strong></a></li>
-                <li><a href="https://open.spotify.com/album/5EYKrEDnKhhcNxGedaRQeK?si=XsVsxpnZSY63r7Z-H8KEug"><strong>Eternal Sunshine (2024)</strong></a></li>
+                <li><a href="https://open.spotify.com/album/5MfeQZrrNfMqcaq03U9qOr?si=Z2aA0ChoRwiuuwb5im6hLQ"><strong>Christmas Kisses (EP) </strong></a>(2012)</li>
+                <li><a href="https://open.spotify.com/album/2VSBGJ8bUuNgmOYXHIQagM?si=MRppEiUXQAe8eOV7r5Kkew"><strong>Yours Truly </strong></a>(2013)</li>
+                <li><a href="https://open.spotify.com/album/6EVYTRG1drKdO8OnIQBeEj?si=ekmv9WE8RPesMctVIQW5fg"><strong>My Everything </strong></a>(2014)</li>
+                <li><a href="https://open.spotify.com/album/5wJD60fqranwuUGvOGSiyt?si=qvqfDGb6TZORLOmbkUSz-Q"><strong>Christmas & Chill (EP) </strong></a>(2015)</li>
+                <li><a href="https://open.spotify.com/album/5X7x18kW3mVIvnuNeedM6b?si=AmI9DrjkQY6UIJseVkXfvg"><strong>Dangerous Woman </strong></a>(2016)</li>
+                <li><a href="https://open.spotify.com/album/3tx8gQqWbGwqIGZHqDNrGe?si=b_zqzFtXTFK-34CuJ3210A"><strong>Sweetener </strong></a>(2018)</li>
+                <li><a href="https://open.spotify.com/album/2fYhqwDWXjbpjaIJPEfKFw?si=-qgfQ6FdSQWi4J94JvK2vw"><strong>Thank U, Next </strong></a>(2019)</li>
+                <li><a href="https://open.spotify.com/album/5UACk85y1hNRSUtY0ss8pb?si=Y2sTRrMpQ9e1vbt3ExVzbg"><strong>k bye for now (swt live) </strong></a>(2019)</li>
+                <li><a href="https://open.spotify.com/album/74vajFwEwXJ61OW1DKSPEa?si=Jl0L_NFTQ2eIhO1E03ceuw"><strong>Positions </strong></a>(2020)</li>
+                <li><a href="https://open.spotify.com/album/5EYKrEDnKhhcNxGedaRQeK?si=XsVsxpnZSY63r7Z-H8KEug"><strong>Eternal Sunshine </strong></a>(2024)</li>
             </ul>
         </section>
 
@@ -52,14 +53,14 @@
             </ul>
         </section>
 
-        <section id="filmes e programas de TV" class="section">
+        <section id="filmes" class="section">
             <h2>Filmes e programas de TV</h2>
             <ul>
                 <li><strong>Brilhante Victoria</strong> (2010)</li>
                 <li><strong>Sam & Cat</strong> (2013)</li>
                 <li><strong>Scream Queens</strong> (2015)</li>
                 <li><strong>Excuse Me, I Love You</strong> (2020)</li>
-                <li><strong>Não Olhe para Cima</strong> (2021)</li<a href="https://www.instagram.com/arianagrande">
+                <li><strong>Não Olhe para Cima</strong> (2021)</li>
                 <li><strong>Wicked</strong> (2024)</li>
                 <li><strong>Wicked: parte 2</strong> (2025)</li>
 
@@ -69,10 +70,10 @@
         <section id="contact" class="section">
             <h2>Contato</h2>
             <p>Para mais informações, siga Ariana nas redes sociais:</p>
-            <ul>
-                <li><a href="https://www.instagram.com/arianagrande" target="_blank">Instagram</a></li>
-                <li><a href="https://twitter.com/arianagrande" target="_blank">Twitter</a></li>
-                <li><a href="https://www.youtube.com/user/osnapitzari" target="_blank">YouTube</a></li>
+            <ul class="redes_link">
+                <li><a href="https://www.instagram.com/arianagrande" target="_blank"><strong>Instagram</strong></a></li>
+                <li><a href="https://twitter.com/arianagrande" target="_blank"><strong>Twitter</strong></a></li>
+                <li><a href="https://www.youtube.com/user/osnapitzari" target="_blank"><strong>YouTube</strong></a></li>
             </ul>
         </section>
     </main>
