--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
         <section id="albums" class="section">
             <h2>Principais Álbuns e EPs</h2>
             <ul class="albuns_link">
-                <li><a href="https://open.spotify.com/album/5MfeQZrrNfMqcaq03U9qOr?si=Z2aA0ChoRwiuuwb5im6hLQ"><strong>Christmas Kisses (EP) </strong></a>(2012)</li>
-                <li><a href="https://open.spotify.com/album/2VSBGJ8bUuNgmOYXHIQagM?si=MRppEiUXQAe8eOV7r5Kkew"><strong>Yours Truly </strong></a>(2013)</li>
-                <li><a href="https://open.spotify.com/album/6EVYTRG1drKdO8OnIQBeEj?si=ekmv9WE8RPesMctVIQW5fg"><strong>My Everything </strong></a>(2014)</li>
-                <li><a href="https://open.spotify.com/album/5wJD60fqranwuUGvOGSiyt?si=qvqfDGb6TZORLOmbkUSz-Q"><strong>Christmas & Chill (EP) </strong></a>(2015)</li>
-                <li><a href="https://open.spotify.com/album/5X7x18kW3mVIvnuNeedM6b?si=AmI9DrjkQY6UIJseVkXfvg"><strong>Dangerous Woman </strong></a>(2016)</li>
-                <li><a href="https://open.spotify.com/album/3tx8gQqWbGwqIGZHqDNrGe?si=b_zqzFtXTFK-34CuJ3210A"><strong>Sweetener </strong></a>(2018)</li>
-                <li><a href="https://open.spotify.com/album/2fYhqwDWXjbpjaIJPEfKFw?si=-qgfQ6FdSQWi4J94JvK2vw"><strong>Thank U, Next </strong></a>(2019)</li>
-                <li><a href="https://open.spotify.com/album/5UACk85y1hNRSUtY0ss8pb?si=Y2sTRrMpQ9e1vbt3ExVzbg"><strong>k bye for now (swt live) </strong></a>(2019)</li>
-                <li><a href="https://open.spotify.com/album/74vajFwEwXJ61OW1DKSPEa?si=Jl0L_NFTQ2eIhO1E03ceuw"><strong>Positions </strong></a>(2020)</li>
-                <li><a href="https://open.spotify.com/album/5EYKrEDnKhhcNxGedaRQeK?si=XsVsxpnZSY63r7Z-H8KEug"><strong>Eternal Sunshine </strong></a>(2024)</li>
+                <div class="container">
+                    <li><img class="albuns__img" src="ck.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/5MfeQZrrNfMqcaq03U9qOr?si=Z2aA0ChoRwiuuwb5im6hLQ"><strong>Christmas Kisses (EP) </strong></a>(2012)</li>
+                    <li><img class="albuns__img" src="yt.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/2VSBGJ8bUuNgmOYXHIQagM?si=MRppEiUXQAe8eOV7r5Kkew"><strong>Yours Truly </strong></a>(2013)</li>
+                    <li><img class="albuns__img" src="me.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/6EVYTRG1drKdO8OnIQBeEj?si=ekmv9WE8RPesMctVIQW5fg"><strong>My Everything </strong></a>(2014)</li>
+                    <li><img class="albuns__img" src="cec.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/5wJD60fqranwuUGvOGSiyt?si=qvqfDGb6TZORLOmbkUSz-Q"><strong>Christmas & Chill (EP) </strong></a>(2015)</li>
+                    <li><img class="albuns__img" src="dw.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/5X7x18kW3mVIvnuNeedM6b?si=AmI9DrjkQY6UIJseVkXfvg"><strong>Dangerous Woman </strong></a>(2016)</li>
+                    <li><img class="albuns__img" src="swt.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/3tx8gQqWbGwqIGZHqDNrGe?si=b_zqzFtXTFK-34CuJ3210A"><strong>Sweetener </strong></a>(2018)</li>
+                    <li><img class="albuns__img" src="tun.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/2fYhqwDWXjbpjaIJPEfKFw?si=-qgfQ6FdSQWi4J94JvK2vw"><strong>Thank U, Next </strong></a>(2019)</li>
+                    <li><img class="albuns__img" src="kfn.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/5UACk85y1hNRSUtY0ss8pb?si=Y2sTRrMpQ9e1vbt3ExVzbg"><strong>k bye for now (swt live) </strong></a>(2019)</li>
+                    <li><img class="albuns__img" src="pst.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/74vajFwEwXJ61OW1DKSPEa?si=Jl0L_NFTQ2eIhO1E03ceuw"><strong>Positions </strong></a>(2020)</li>
+                    <li><img class="albuns__img" src="es.png" alt="Capa do Álbum"><a href="https://open.spotify.com/album/5EYKrEDnKhhcNxGedaRQeK?si=XsVsxpnZSY63r7Z-H8KEug"><strong>Eternal Sunshine </strong></a>(2024)</li>
+                </div>
             </ul>
         </section>
 
